# orm2pydantic

./: setup.cfg
requirements/: common.txt
src/orm2pydantic/: __init__.py  sqla.py
tests/: informal.py
