[metadata]
name = orm2pydantic
version = 0.0.1
author = Daniil
author_email = mail@placeholder123.to
description = Convert SQLAlchemy models to Pydantic models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.fajnberg.de/daniil/orm2pydantic
project_urls =
    Bug Tracker = https://git.fajnberg.de/daniil/orm2pydantic/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    ...

[options.extras_require]
dev =
    coverage

[options.packages.find]
where = src
