[metadata]
name = orm2pydantic
version = 0.1.0
author = Daniil Fajnberg
author_email = mail@daniil.fajnberg.de
description = Convert SQLAlchemy models to Pydantic models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.fajnberg.de/daniil/orm2pydantic
project_urls =
    Bug Tracker = https://git.fajnberg.de/daniil/orm2pydantic/issues
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <4.0
install_requires =
    Pydantic
    SQLAlchemy

[options.extras_require]
dev =
    coverage

[options.packages.find]
where = src
